[metadata]
name = python-kuro 
version = 0.0.42
description = 'Python library for interfacing with Pioneer Kuro TV using the serial port',  # Required   
long_description = file: README.rst
keywords = kuro, pioneer, tv, serial
license = MIT
license_file = LICENSE

home-page  = https://github.com/gpulido/python-kuro  
author = Gabriel Pulido

author_email = gabriel.pulidodetorres@gmail.com

classifiers =    
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:

install_requires = 
    pySerial

# setup_requires =
#   setuptools_scm
    